tms/grammar.output
Grammar

    0 $accept: tmsp $end

    1 tmsp: %empty
    2     | declarations

    3 declarations: declaration T_LINE_SEP
    4             | declarations declaration T_LINE_SEP

    5 declaration: %empty
    6            | 'R' T_INT T_INT T_STRING
    7            | 'T' T_INT T_INT T_INT T_STRING
    8            | 'J' T_INT T_INT T_INT T_STRING
    9            | 'A' T_INT T_INT T_INT T_STRING
   10            | 'A' T_INT T_INT T_INT T_STRING T_INT
   11            | 'A' T_INT T_INT T_INT T_STRING T_INT T_INT T_INT
   12            | 'D' T_INT T_INT T_INT T_STRING
   13            | 'Q' T_INT T_INT T_INT T_INT
   14            | 'S' T_INT T_INT T_INT T_INT
   15            | 'P' T_INT T_INT T_INT T_INT
   16            | 'p' T_INT T_INT T_INT T_INT
   17            | 'F' T_INT T_INT T_INT
   18            | 'G' T_INT T_INT T_INT T_INT


Terminals, with rules where they appear

$end (0) 0
'A' (65) 9 10 11
'D' (68) 12
'F' (70) 17
'G' (71) 18
'J' (74) 8
'P' (80) 15
'Q' (81) 13
'R' (82) 6
'S' (83) 14
'T' (84) 7
'p' (112) 16
error (256)
T_INT (258) 6 7 8 9 10 11 12 13 14 15 16 17 18
T_STRING (259) 6 7 8 9 10 11 12
T_LINE_SEP (260) 3 4


Nonterminals, with rules where they appear

$accept (17)
    on left: 0
tmsp (18)
    on left: 1 2, on right: 0
declarations (19)
    on left: 3 4, on right: 2 4
declaration (20)
    on left: 5 6 7 8 9 10 11 12 13 14 15 16 17 18, on right: 3 4


State 0

    0 $accept: . tmsp $end

    'R'  shift, and go to state 1
    'T'  shift, and go to state 2
    'J'  shift, and go to state 3
    'A'  shift, and go to state 4
    'D'  shift, and go to state 5
    'Q'  shift, and go to state 6
    'S'  shift, and go to state 7
    'P'  shift, and go to state 8
    'p'  shift, and go to state 9
    'F'  shift, and go to state 10
    'G'  shift, and go to state 11

    T_LINE_SEP  reduce using rule 5 (declaration)
    $default    reduce using rule 1 (tmsp)

    tmsp          go to state 12
    declarations  go to state 13
    declaration   go to state 14


State 1

    6 declaration: 'R' . T_INT T_INT T_STRING

    T_INT  shift, and go to state 15


State 2

    7 declaration: 'T' . T_INT T_INT T_INT T_STRING

    T_INT  shift, and go to state 16


State 3

    8 declaration: 'J' . T_INT T_INT T_INT T_STRING

    T_INT  shift, and go to state 17


State 4

    9 declaration: 'A' . T_INT T_INT T_INT T_STRING
   10            | 'A' . T_INT T_INT T_INT T_STRING T_INT
   11            | 'A' . T_INT T_INT T_INT T_STRING T_INT T_INT T_INT

    T_INT  shift, and go to state 18


State 5

   12 declaration: 'D' . T_INT T_INT T_INT T_STRING

    T_INT  shift, and go to state 19


State 6

   13 declaration: 'Q' . T_INT T_INT T_INT T_INT

    T_INT  shift, and go to state 20


State 7

   14 declaration: 'S' . T_INT T_INT T_INT T_INT

    T_INT  shift, and go to state 21


State 8

   15 declaration: 'P' . T_INT T_INT T_INT T_INT

    T_INT  shift, and go to state 22


State 9

   16 declaration: 'p' . T_INT T_INT T_INT T_INT

    T_INT  shift, and go to state 23


State 10

   17 declaration: 'F' . T_INT T_INT T_INT

    T_INT  shift, and go to state 24


State 11

   18 declaration: 'G' . T_INT T_INT T_INT T_INT

    T_INT  shift, and go to state 25


State 12

    0 $accept: tmsp . $end

    $end  shift, and go to state 26


State 13

    2 tmsp: declarations .
    4 declarations: declarations . declaration T_LINE_SEP

    'R'  shift, and go to state 1
    'T'  shift, and go to state 2
    'J'  shift, and go to state 3
    'A'  shift, and go to state 4
    'D'  shift, and go to state 5
    'Q'  shift, and go to state 6
    'S'  shift, and go to state 7
    'P'  shift, and go to state 8
    'p'  shift, and go to state 9
    'F'  shift, and go to state 10
    'G'  shift, and go to state 11

    T_LINE_SEP  reduce using rule 5 (declaration)
    $default    reduce using rule 2 (tmsp)

    declaration  go to state 27


State 14

    3 declarations: declaration . T_LINE_SEP

    T_LINE_SEP  shift, and go to state 28


State 15

    6 declaration: 'R' T_INT . T_INT T_STRING

    T_INT  shift, and go to state 29


State 16

    7 declaration: 'T' T_INT . T_INT T_INT T_STRING

    T_INT  shift, and go to state 30


State 17

    8 declaration: 'J' T_INT . T_INT T_INT T_STRING

    T_INT  shift, and go to state 31


State 18

    9 declaration: 'A' T_INT . T_INT T_INT T_STRING
   10            | 'A' T_INT . T_INT T_INT T_STRING T_INT
   11            | 'A' T_INT . T_INT T_INT T_STRING T_INT T_INT T_INT

    T_INT  shift, and go to state 32


State 19

   12 declaration: 'D' T_INT . T_INT T_INT T_STRING

    T_INT  shift, and go to state 33


State 20

   13 declaration: 'Q' T_INT . T_INT T_INT T_INT

    T_INT  shift, and go to state 34


State 21

   14 declaration: 'S' T_INT . T_INT T_INT T_INT

    T_INT  shift, and go to state 35


State 22

   15 declaration: 'P' T_INT . T_INT T_INT T_INT

    T_INT  shift, and go to state 36


State 23

   16 declaration: 'p' T_INT . T_INT T_INT T_INT

    T_INT  shift, and go to state 37


State 24

   17 declaration: 'F' T_INT . T_INT T_INT

    T_INT  shift, and go to state 38


State 25

   18 declaration: 'G' T_INT . T_INT T_INT T_INT

    T_INT  shift, and go to state 39


State 26

    0 $accept: tmsp $end .

    $default  accept


State 27

    4 declarations: declarations declaration . T_LINE_SEP

    T_LINE_SEP  shift, and go to state 40


State 28

    3 declarations: declaration T_LINE_SEP .

    $default  reduce using rule 3 (declarations)


State 29

    6 declaration: 'R' T_INT T_INT . T_STRING

    T_STRING  shift, and go to state 41


State 30

    7 declaration: 'T' T_INT T_INT . T_INT T_STRING

    T_INT  shift, and go to state 42


State 31

    8 declaration: 'J' T_INT T_INT . T_INT T_STRING

    T_INT  shift, and go to state 43


State 32

    9 declaration: 'A' T_INT T_INT . T_INT T_STRING
   10            | 'A' T_INT T_INT . T_INT T_STRING T_INT
   11            | 'A' T_INT T_INT . T_INT T_STRING T_INT T_INT T_INT

    T_INT  shift, and go to state 44


State 33

   12 declaration: 'D' T_INT T_INT . T_INT T_STRING

    T_INT  shift, and go to state 45


State 34

   13 declaration: 'Q' T_INT T_INT . T_INT T_INT

    T_INT  shift, and go to state 46


State 35

   14 declaration: 'S' T_INT T_INT . T_INT T_INT

    T_INT  shift, and go to state 47


State 36

   15 declaration: 'P' T_INT T_INT . T_INT T_INT

    T_INT  shift, and go to state 48


State 37

   16 declaration: 'p' T_INT T_INT . T_INT T_INT

    T_INT  shift, and go to state 49


State 38

   17 declaration: 'F' T_INT T_INT . T_INT

    T_INT  shift, and go to state 50


State 39

   18 declaration: 'G' T_INT T_INT . T_INT T_INT

    T_INT  shift, and go to state 51


State 40

    4 declarations: declarations declaration T_LINE_SEP .

    $default  reduce using rule 4 (declarations)


State 41

    6 declaration: 'R' T_INT T_INT T_STRING .

    $default  reduce using rule 6 (declaration)


State 42

    7 declaration: 'T' T_INT T_INT T_INT . T_STRING

    T_STRING  shift, and go to state 52


State 43

    8 declaration: 'J' T_INT T_INT T_INT . T_STRING

    T_STRING  shift, and go to state 53


State 44

    9 declaration: 'A' T_INT T_INT T_INT . T_STRING
   10            | 'A' T_INT T_INT T_INT . T_STRING T_INT
   11            | 'A' T_INT T_INT T_INT . T_STRING T_INT T_INT T_INT

    T_STRING  shift, and go to state 54


State 45

   12 declaration: 'D' T_INT T_INT T_INT . T_STRING

    T_STRING  shift, and go to state 55


State 46

   13 declaration: 'Q' T_INT T_INT T_INT . T_INT

    T_INT  shift, and go to state 56


State 47

   14 declaration: 'S' T_INT T_INT T_INT . T_INT

    T_INT  shift, and go to state 57


State 48

   15 declaration: 'P' T_INT T_INT T_INT . T_INT

    T_INT  shift, and go to state 58


State 49

   16 declaration: 'p' T_INT T_INT T_INT . T_INT

    T_INT  shift, and go to state 59


State 50

   17 declaration: 'F' T_INT T_INT T_INT .

    $default  reduce using rule 17 (declaration)


State 51

   18 declaration: 'G' T_INT T_INT T_INT . T_INT

    T_INT  shift, and go to state 60


State 52

    7 declaration: 'T' T_INT T_INT T_INT T_STRING .

    $default  reduce using rule 7 (declaration)


State 53

    8 declaration: 'J' T_INT T_INT T_INT T_STRING .

    $default  reduce using rule 8 (declaration)


State 54

    9 declaration: 'A' T_INT T_INT T_INT T_STRING .
   10            | 'A' T_INT T_INT T_INT T_STRING . T_INT
   11            | 'A' T_INT T_INT T_INT T_STRING . T_INT T_INT T_INT

    T_INT  shift, and go to state 61

    $default  reduce using rule 9 (declaration)


State 55

   12 declaration: 'D' T_INT T_INT T_INT T_STRING .

    $default  reduce using rule 12 (declaration)


State 56

   13 declaration: 'Q' T_INT T_INT T_INT T_INT .

    $default  reduce using rule 13 (declaration)


State 57

   14 declaration: 'S' T_INT T_INT T_INT T_INT .

    $default  reduce using rule 14 (declaration)


State 58

   15 declaration: 'P' T_INT T_INT T_INT T_INT .

    $default  reduce using rule 15 (declaration)


State 59

   16 declaration: 'p' T_INT T_INT T_INT T_INT .

    $default  reduce using rule 16 (declaration)


State 60

   18 declaration: 'G' T_INT T_INT T_INT T_INT .

    $default  reduce using rule 18 (declaration)


State 61

   10 declaration: 'A' T_INT T_INT T_INT T_STRING T_INT .
   11            | 'A' T_INT T_INT T_INT T_STRING T_INT . T_INT T_INT

    T_INT  shift, and go to state 62

    $default  reduce using rule 10 (declaration)


State 62

   11 declaration: 'A' T_INT T_INT T_INT T_STRING T_INT T_INT . T_INT

    T_INT  shift, and go to state 63


State 63

   11 declaration: 'A' T_INT T_INT T_INT T_STRING T_INT T_INT T_INT .

    $default  reduce using rule 11 (declaration)
